force-app/main/default/objects/Quote_Request__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <displayFormat>Q-{0000}-{MMDDYY}</displayFormat>
    <label>Quote Number</label>
    <type>AutoNumber</type>
</CustomField>