force-app/main/default/objects/Quote_Request__c/fields/Quote_Request_Closed__c.field-meta.xml
<CustomField>
    <fullName>Quote_Request_Closed__c</fullName>
    <formula
  >Case( Status__c ,&quot;Completed - Sent to customer&quot;, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Request Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>