force-app/main/default/objects/Quote_Request__c/fields/Quote_Request_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Request_Closed_Date__c</fullName>
    <label>Quote Request Closed Date</label>
    <type>DateTime</type>
</CustomField>