force-app/main/default/objects/Quote_Request__c/fields/Quote_Request_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Quote_Request_Days_Open__c</fullName>
    <formula>IF
(
	ISBLANK(Quote_Request_Closed_Date__c) = FALSE, 
		(
			5 * ( FLOOR( ( DATEVALUE(Quote_Request_Closed_Date__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(Quote_Request_Closed_Date__c) - DATE( 1900, 1, 8), 7 ) ) 
		)
		-
		(
			5 * ( FLOOR( ( DATEVALUE(CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 8), 7 ) ) 
		), 
	0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Request Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>