force-app/main/default/objects/Quote_Request__c/fields/Quote_Request_Hours_Open__c.field-meta.xml
<CustomField>
    <fullName>Quote_Request_Hours_Open__c</fullName>
    <formula
  >IF(ISBLANK(Quote_Request_Closed_Date__c) = FALSE, TEXT(FLOOR((Quote_Request_Closed_Date__c - Submitted_Date__c)*24)) &amp;&apos; Hr &apos;&amp; TEXT(FLOOR(((((Quote_Request_Closed_Date__c- Submitted_Date__c)*24)-FLOOR((Quote_Request_Closed_Date__c- Submitted_Date__c)*24))*60)))&amp;&apos; Mins&apos;, &apos;0 Hr&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Request Hours Open</label>
    <type>Text</type>
</CustomField>