force-app/main/default/objects/Quote_Request__c/fields/Quote_Request_Open_Age__c.field-meta.xml
<CustomField>
    <fullName>Quote_Request_Open_Age__c</fullName>
    <formula>Today() -  Datevalue(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Request Open Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>