force-app/main/default/objects/Quote_Request__c/fields/Quote_Request_Open_hours__c.field-meta.xml
<CustomField>
    <fullName>Quote_Request_Open_hours__c</fullName>
    <formula>IF
(
ISBLANK(Quote_Request_Closed_Date__c) = FALSE,
(
Quote_Request_Closed_Date__c - CreatedDate
),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Request Open hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>