force-app/main/default/objects/Quote_Request__c/fields/Quote_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Request_Type__c</fullName>
    <label>Quote Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Universal Source</fullName>
            </value>
            <value>
                <fullName>Non_Calendar</fullName>
                <label>Non-Calendar</label>
            </value>
            <value>
                <fullName>Custom Calendar</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
                <isActive>false</isActive>
                <label>Custom</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Stationary</fullName>
                <isActive>false</isActive>
                <label>Stationary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>