force-app/main/default/objects/Quote_Request__c/fields/Reason_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Reason_Cancelled__c</fullName>
    <label>Reason Cancelled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reason Code 1</fullName>
            </value>
            <value>
                <fullName>Reason Code 2</fullName>
            </value>
            <value>
                <fullName>Reason Code 3</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>