force-app/main/default/objects/Quote_Request__c/fields/Record_Owner_Manager_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Record_Owner_Manager_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Owner Manager/Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>