force-app/main/default/objects/Quote_Request__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <formula>Account__r.Primary_Team_Member2__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep</label>
    <type>Text</type>
</CustomField>