force-app/main/default/objects/Quote_Request__c/fields/Sales_Rep_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Id__c</fullName>
    <formula>Account__r.Primary_Team_Member2__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Id</label>
    <type>Text</type>
</CustomField>