force-app/main/default/objects/Quote_Request__c/fields/Same_Ad_on_All__c.field-meta.xml
<CustomField>
    <fullName>Same_Ad_on_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Ad on All?</label>
    <type>Checkbox</type>
</CustomField>