force-app/main/default/objects/Quote_Request__c/fields/Sample_Lead_Time_days__c.field-meta.xml
<CustomField>
    <fullName>Sample_Lead_Time_days__c</fullName>
    <description>QR - Quote PDF</description>
    <label>Sample Lead Time (days)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>