force-app/main/default/objects/Quote_Request__c/fields/Send_me_a_copy_of_my_responses__c.field-meta.xml
<CustomField>
    <fullName>Send_me_a_copy_of_my_responses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send me a copy of my responses</label>
    <type>Checkbox</type>
</CustomField>