force-app/main/default/objects/Quote_Request__c/fields/Ship_to_Zip_code__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Zip_code__c</fullName>
    <label>Ship to Zip code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>