force-app/main/default/objects/Quote_Request__c/fields/Ships_From__c.field-meta.xml
<CustomField>
    <fullName>Ships_From__c</fullName>
    <description>QR - Quoting Ships From text field</description>
    <label>Ships From</label>
    <type>TextArea</type>
</CustomField>