force-app/main/default/objects/Quote_Request__c/fields/Site_Selection__c.field-meta.xml
<CustomField>
    <fullName>Site_Selection__c</fullName>
    <label>Site Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sleepy Eye</fullName>
            </value>
            <value>
                <fullName>Red Wing</fullName>
            </value>
            <value>
                <fullName>Clearwater- B1</fullName>
            </value>
            <value>
                <fullName>Clearwater- B2</fullName>
            </value>
            <value>
                <fullName>Factory Direct/Vendor</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Doniphan</fullName>
            </value>
            <value>
                <fullName>Spring Hill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>