force-app/main/default/objects/Quote_Request__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>For QR - Size</description>
    <label>Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>