force-app/main/default/objects/Quote_Request__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request in Draft</fullName>
                <default>true</default>
                <label>Request in Draft</label>
            </value>
            <value>
                <fullName>Request Submitted</fullName>
            </value>
            <value>
                <fullName>Request Received</fullName>
            </value>
            <value>
                <fullName>Request in Progress</fullName>
            </value>
            <value>
                <fullName>Request Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>