force-app/main/default/objects/Quote_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Art</fullName>
            </value>
            <value>
                <fullName>Pending Asia</fullName>
            </value>
            <value>
                <fullName>Pending CS/Sales</fullName>
            </value>
            <value>
                <fullName>Pending Customer</fullName>
            </value>
            <value>
                <fullName>Pending Internal Other</fullName>
                <label>Pending Internal/Other</label>
            </value>
            <value>
                <fullName>Pending Logistics</fullName>
            </value>
            <value>
                <fullName>Pending Manager Approval</fullName>
            </value>
            <value>
                <fullName>Pending Production</fullName>
            </value>
            <value>
                <fullName>Pending Purchasing</fullName>
            </value>
            <value>
                <fullName>Pending Quote Team</fullName>
            </value>
            <value>
                <fullName>Pending Vendor</fullName>
            </value>
            <value>
                <fullName>Waiting for Customer Response</fullName>
            </value>
            <value>
                <fullName>Closed - Sent to customer</fullName>
            </value>
            <value>
                <fullName>Customer/Sales Requested</fullName>
                <label>Cancelled – Customer/Sales Requested</label>
            </value>
            <value>
                <fullName>Cancelled – production cannot produce</fullName>
            </value>
            <value>
                <fullName
        >Cancelled - Pricing available on internal website</fullName>
                <label>Cancelled - Pricing available on internal website</label>
            </value>
            <value>
                <fullName>Cancelled - Not meeting MOQ</fullName>
            </value>
            <value>
                <fullName>Cancelled - In hands cannot be met</fullName>
            </value>
            <value>
                <fullName>Cancelled - Duplicate</fullName>
            </value>
            <value>
                <fullName>Cancelled - No Response</fullName>
            </value>
            <value>
                <fullName>Cancelled - Sent to Wrong Department</fullName>
            </value>
            <value>
                <fullName
        >Cancelled – not enough info submitted/invalid</fullName>
                <label>Cancelled – not enough info submitted/invalid</label>
            </value>
            <value>
                <fullName>New/Draft</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Cancelled - By Customer/Sales Rep</fullName>
                <isActive>false</isActive>
                <label>Cancelled - By Customer/Sales Rep</label>
            </value>
            <value>
                <fullName>Cancelled - Miscellaneous</fullName>
                <isActive>false</isActive>
                <label>Cancelled - Miscellaneous</label>
            </value>
            <value>
                <fullName>Cancelled - Production Cannot Produce</fullName>
                <isActive>false</isActive>
                <label>Cancelled - Production Cannot Produce</label>
            </value>
            <value>
                <fullName>Completed - Sent to customer</fullName>
                <isActive>false</isActive>
                <label>Completed - Sent to customer</label>
            </value>
            <value>
                <fullName>Completed -High priority</fullName>
                <isActive>false</isActive>
                <label>Completed -High priority</label>
            </value>
            <value>
                <fullName>Waiting for Asia info</fullName>
                <isActive>false</isActive>
                <label>Waiting for Asia info</label>
            </value>
            <value>
                <fullName>Waiting for Creative Services</fullName>
                <isActive>false</isActive>
                <label>Waiting for Creative Services</label>
            </value>
            <value>
                <fullName
        >Waiting for Customer Service or Sales Information</fullName>
                <isActive>false</isActive>
                <label>Waiting for Customer Service or Sales Information</label>
            </value>
            <value>
                <fullName>Waiting for Internal department</fullName>
                <isActive>false</isActive>
                <label>Waiting for Internal department</label>
            </value>
            <value>
                <fullName>Waiting for Logistics</fullName>
                <isActive>false</isActive>
                <label>Waiting for Logistics</label>
            </value>
            <value>
                <fullName>Waiting for Production info</fullName>
                <isActive>false</isActive>
                <label>Waiting for Production info</label>
            </value>
            <value>
                <fullName>Waiting for Vendor info</fullName>
                <isActive>false</isActive>
                <label>Waiting for Vendor info</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>