force-app/main/default/objects/Quote_Request__c/fields/Style_Number_of_Sheets__c.field-meta.xml
<CustomField>
    <fullName>Style_Number_of_Sheets__c</fullName>
    <label>Style / Number of Sheets</label>
    <length>50</length>
    <type>Text</type>
</CustomField>