force-app/main/default/objects/Quote_Request__c/fields/Total_Quote_Products__c.field-meta.xml
<CustomField>
    <fullName>Total_Quote_Products__c</fullName>
    <description>Roll up total number quote products</description>
    <label>Total Quote Products</label>
    <summaryForeignKey>Quote_Product__c.Quote_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>