force-app/main/default/objects/Quote_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Written Quote (Account Price)</fullName>
            </value>
            <value>
                <fullName>Written Quote (Large Order Price)</fullName>
            </value>
            <value>
                <fullName>Written Quote (Pricing Exception)</fullName>
            </value>
            <value>
                <fullName>Non-Written Quote (Pricing Exception)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>