force-app/main/default/objects/Quote_Request__c/fields/Valid_Through__c.field-meta.xml
<CustomField>
    <fullName>Valid_Through__c</fullName>
    <description>QR Needed - Gen Quote</description>
    <label>Valid Through</label>
    <type>Date</type>
</CustomField>