force-app/main/default/objects/Quote_Request__c/fields/Waive_Extra_Charges__c.field-meta.xml
<CustomField>
    <fullName>Waive_Extra_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waive Extra Charges</label>
    <type>Checkbox</type>
</CustomField>