force-app/main/default/objects/Quote_Request__c/recordTypes/Apparel.recordType-meta.xml
<RecordType>
    <fullName>Apparel</fullName>
    <active>true</active>
    <description
  >Quote Requests Specifically for Apparels Printing Orders - Not in use can be deleted</description>
    <label>Apparel</label>
</RecordType>