force-app/main/default/objects/Quote_Request__c/recordTypes/CSR_Cust_Universal_Source_Stationary_Hardgood_Default_Custom_Calendar.recordType-meta.xml
<RecordType>
    <fullName
  >CSR_Cust_Universal_Source_Stationary_Hardgood_Default_Custom_Calendar</fullName>
    <active>true</active>
    <description
  >2 records in here, merge with the other RT with same name</description>
    <label
  >CSR Cust / Universal Source / Stationery / Hardgood (Default) ,Custom Calendar</label>
</RecordType>