force-app/main/default/objects/Quote_Request__c/recordTypes/CSR_Customer_Calendar.recordType-meta.xml
<RecordType>
    <fullName>CSR_Customer_Calendar</fullName>
    <active>true</active>
    <description>No data in this RT can be deleted</description>
    <label>CSR - Customer Calendar</label>
</RecordType>