force-app/main/default/objects/Quote_Request__c/recordTypes/Custom_Calendar.recordType-meta.xml
<RecordType>
    <fullName>Custom_Calendar</fullName>
    <active>true</active>
    <description
  >Calendar Custom Price. For Quotes over 100,000 units - Program Manager needs to hold a pre-quote meeting</description>
    <label>Custom Calendar</label>
</RecordType>