force-app/main/default/objects/Quote_Request__c/recordTypes/Custom_Universal_Source.recordType-meta.xml
<RecordType>
    <fullName>Custom_Universal_Source</fullName>
    <active>true</active>
    <description
  >An Item Number and/or Universal Source branding (NON-Published Pricing/Options for Stockline Universal Source or Custom Products) or a mix of Non-Branded, BIC Branded, and/or Custom / Universal Source Products (Non-Published Pricing/Option)</description>
    <label>Custom / Universal Source / Stationery / Hardgood</label>
</RecordType>