force-app/main/default/objects/Quote_Request__c/recordTypes/Hardgoods.recordType-meta.xml
<RecordType>
    <fullName>Hardgoods</fullName>
    <active>false</active>
    <description
  >Hardgoods: Any NON-BIC-Branded Products with an Item Number (Non-Published Pricing/Options for Stockline or Modified Stockline Products)</description>
    <label>Hardgoods</label>
</RecordType>