force-app/main/default/objects/Quote_Request__c/recordTypes/Multi_category.recordType-meta.xml
<RecordType>
    <fullName>Multi_category</fullName>
    <active>false</active>
    <description
  >Multi-Category: A Mix of Non-Branded, BIC Branded, and/or Custom / Universal Source Products (Non-Published Pricing/Options for Stockline or Modified Stockline Products)</description>
    <label>Multicategory</label>
</RecordType>