force-app/main/default/objects/Quote_Request__c/recordTypes/Non_Calendar.recordType-meta.xml
<RecordType>
    <fullName>Non_Calendar</fullName>
    <active>true</active>
    <description
  >Non-Calendar: Any NON-BIC-Branded Products with an Item Number (Non-Published Pricing/Options for Stockline or Modified Stockline Products)</description>
    <label>Non-Calendar</label>
</RecordType>