force-app/main/default/objects/Quote_Request__c/recordTypes/Sales_Pricing_Quote.recordType-meta.xml
<RecordType>
    <fullName>Sales_Pricing_Quote</fullName>
    <active>false</active>
    <description
  >Standard Pricing, Over-Catalog Quantity Pricing, or Approval Needed for System Pricing.</description>
    <label>Standard Pricing</label>
</RecordType>