force-app/main/default/objects/Quote_Request__c/recordTypes/Stationary.recordType-meta.xml
<RecordType>
    <fullName>Stationary</fullName>
    <active>false</active>
    <description
  >Any BIC-Branded Products with an Item Number (Non-Published Pricing/Options for Stockline or Modified Stockline Products)</description>
    <label>Stationery</label>
</RecordType>