force-app/main/default/objects/Quote_Request__c/validationRules/Less_than_5_products_per_Quote_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Less_than_5_products_per_Quote_Request</fullName>
    <active>true</active>
    <description
  >Stop users from creating more than 5 Products per quote request</description>
    <errorConditionFormula>AND( RecordTypeId = &apos;0124w000001pXNL&apos;,
Total_Quote_Products__c &gt; 5)</errorConditionFormula>
    <errorMessage>Do not add more than 5 products per Quote.</errorMessage>
</ValidationRule>