force-app/main/default/objects/Quote_Request__c/validationRules/Status_required_for_certain_stage_values.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_required_for_certain_stage_values</fullName>
    <active>true</active>
    <errorConditionFormula
  >AND(OR((Text(Stage__c) )= &apos;Request in Progress&apos;,  (Text(Stage__c)) = &apos;Request Closed&apos;), ISBLANK(Text(( Status__c ))))</errorConditionFormula>
    <errorMessage
  >Please select the respective Status for this stage value</errorMessage>
</ValidationRule>