force-app/main/default/objects/Quote_Request__c/listViews/All_Open_Calendar_QRs_In_Draft_included.listView-meta.xml
<ListView>
    <fullName>All_Open_Calendar_QRs_In_Draft_included</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Project_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value
    >Request in Draft,Request Submitted,Request Received,Request in Progress</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Quote_Request__c.Custom_Calendar</value>
    </filters>
    <label>All Open Calendar QRs(In Draft included)</label>
</ListView>