force-app/main/default/objects/Quote_Request__c/listViews/All_Open_Calendar_Quote_Requests.listView-meta.xml
<ListView>
    <fullName>All_Open_Calendar_Quote_Requests</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>AccountName__c</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <columns>Additional_Files_or_Images__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value
    >Request in Draft,Request Submitted,Request Received,Request in Progress</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Quote_Request__c.Custom_Calendar</value>
    </filters>
    <label>All Open Calendar Quote Requests</label>
</ListView>