force-app/main/default/objects/Quote_Request__c/listViews/All_Open_Quote_Requests.listView-meta.xml
<ListView>
    <fullName>All_Open_Quote_Requests</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>,Request in Draft,Request Closed</value>
    </filters>
    <label>All Open Quote Requests</label>
</ListView>