force-app/main/default/objects/Quote_Request__c/listViews/All_Quote_Requests.listView-meta.xml
<ListView>
    <fullName>All_Quote_Requests</fullName>
    <columns>NAME</columns>
    <columns>Parent_Quote_Request__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Quote Requests</label>
</ListView>