force-app/main/default/objects/Quote_Request__c/listViews/Andi.listView-meta.xml
<ListView>
    <fullName>Andi</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Request Submitted,Request Received,Request in Progress</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Andrea Powers</value>
    </filters>
    <label>Andi</label>
</ListView>