force-app/main/default/objects/Quote_Request__c/listViews/Brandon.listView-meta.xml
<ListView>
    <fullName>Brandon</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To__c</field>
        <operation>contains</operation>
        <value>Brandon</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Request Received,Request in Progress</value>
    </filters>
    <label>Brandon</label>
</ListView>