force-app/main/default/objects/Quote_Request__c/listViews/Charisel.listView-meta.xml
<ListView>
    <fullName>Charisel</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>AccountName__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Charisel Davis</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Request Submitted,Request Received,Request in Progress</value>
    </filters>
    <label>Charisel</label>
</ListView>