force-app/main/default/objects/Quote_Request__c/listViews/Copy_of_All_Quote_Requests_CH.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Quote_Requests_CH</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <label>My Quote Requests</label>
</ListView>