force-app/main/default/objects/Quote_Request__c/listViews/Custom_Calendar.listView-meta.xml
<ListView>
    <fullName>Custom_Calendar</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Quote_Request__c.Custom_Calendar</value>
    </filters>
    <label>Custom Calendar</label>
    <sharedTo>
        <role>Account_Executive_Manager</role>
        <role>Account_Executive_Rep</role>
        <role>Quoting_Manager</role>
        <role>Quoting_Rep</role>
    </sharedTo>
</ListView>